handle overflow for descriptions (fixes #68)

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -202,6 +202,8 @@ button {
 }
 
 .description {
+  overflow-x: auto;
+
   code, pre {
     background: #eee;
     text-shadow: 0 1px #fff;
